--- a/app/src/main/res/layout/item_lista_reservas.xml
+++ b/app/src/main/res/layout/item_lista_reservas.xml
@@ -8,79 +8,216 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_reserva"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:background="@drawable/borda_sombreada"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="NotSibling">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
+        android:layout_width="4dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/borda_radius_laranja"></FrameLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/item_nome_sala"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_marginTop="10dp"
-                android:padding="8dp"
-                android:text="Nome Sala"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintVertical_bias="1.0"
-                tools:ignore="MissingConstraints" />
-
-
-            <TextView
-                android:id="@+id/item_data_reserva"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/item_data_reserva"
-                android:padding="5dp"
-                android:text="Data"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="normal"
-                app:layout_constraintTop_toBottomOf="@id/item_datahora_final"
-                tools:ignore="MissingConstraints" />
-
-            <TextView
-                android:id="@+id/item_datahora_inicial"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:hint="Horario Inicial"
-                android:padding="5dp"
-                android:textAlignment="textStart"
-                android:textColor="@color/corBack"
-                android:textColorHint="@android:color/black"
-                app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
                 tools:ignore="MissingConstraints">
 
-            </TextView>
+                <TextView
+                    android:id="@+id/item_nome_organizador_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_marginTop="10dp"
+                    android:padding="5dp"
+                    android:text="Autor"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintVertical_bias="1.0"
+                    tools:ignore="MissingConstraints" />
+
+                <TextView
+                    android:id="@+id/item_nome_organizador_reserva"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:layout_marginTop="10dp"
+                    android:padding="5dp"
+                    android:text="Nome autor"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    app:layout_constraintVertical_bias="1.0"
+                    tools:ignore="MissingConstraints" />
+
+            </LinearLayout>
 
 
-            <TextView
-                android:id="@+id/item_datahora_final"
-                android:layout_width="150dp"
+           <!-- <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_marginTop="8dp"
-                android:hint="Horario final"
-                android:padding="5dp"
-                android:textAlignment="textStart"
-                android:textColor="@color/corBack"
-                android:textColorHint="@android:color/black"
-                app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="0dp">
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
 
-            </TextView>
+                <TextView
+                    android:id="@+id/item_nome_sala_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Sala"
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_nome_organizador_reserva"
+                    tools:ignore="MissingConstraints">
 
+                </TextView>
+
+                <TextView
+                    android:id="@+id/item_nome_sala"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="sala"
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_nome_organizador_reserva"
+                    tools:ignore="MissingConstraints">
+
+                </TextView>
+            </LinearLayout>-->
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
+
+                <TextView
+                    android:id="@+id/item_data_reserva_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Data: "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
+                    tools:ignore="MissingConstraints" />
+
+                <TextView
+                    android:id="@+id/item_data_reserva"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Dataaa "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_nome_sala"
+                    tools:ignore="MissingConstraints" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
+
+                <TextView
+                    android:id="@+id/item_datahora_inicial_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Inicio: "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_data_reserva"
+                    tools:ignore="MissingConstraints">
+
+                </TextView>
+
+                <TextView
+                    android:id="@+id/item_datahora_inicial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Inicio hora "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@id/item_data_reserva"
+                    tools:ignore="MissingConstraints">
+
+                </TextView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
+
+
+                <TextView
+                    android:id="@+id/item_datahora_final_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Fim: "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteX="0dp">
+
+                </TextView>
+
+                <TextView
+                    android:id="@+id/item_datahora_final"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:hint="Fimm "
+                    android:padding="5dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/corBack"
+                    android:textColorHint="@android:color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteX="0dp">
+
+                </TextView>
+
+            </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
 
             <TextView
                 android:id="@+id/item_descricao_reserva"
@@ -92,10 +229,11 @@
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="normal"
-                app:layout_constraintTop_toBottomOf="@id/item_data_reserva"
+                app:layout_constraintTop_toBottomOf="@id/item_datahora_final"
                 tools:ignore="MissingConstraints" />
+        </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
