--- a/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/app/src/main/res/layout/activity_reserva_sala.xml
@@ -1,4 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".activitysnormal.ReservaSalaActivity">
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
@@ -104,6 +104,7 @@
                     app:cardPreventCornerOverlap="false"
                     app:cardUseCompatPadding="true"
                     app:layout_constraintTop_toBottomOf="@id/imageView2"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     tools:ignore="MissingConstraints">
 
                     <ScrollView
@@ -264,9 +265,9 @@
 
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
 
 
